<resources>
    <string name="app_name">NoTBus</string>
    <string name="maximum_level_of_zoom_reached">Massimo livello di ingrandimento raggiunto</string>
    <string name="minimum_level_of_zoom_reached">Minimo livello di ingrandimento raggiunto</string>
    <string name="intro_paragraph_text">Con NoTBus, puoi ricevere informazioni in tempo reale sull\'arrivo degli autobus scansionando la pensilina</string>
    <string name="first_paragraph_text">Se la fermata dell\'autobus in cui ti trovi dispone del codice univoco della fermata, allora scansiona quello</string>
    <string name="second_paragraph_text">Altrimenti puoi scansionare il nome della fermata, ti verrà poi chiesto di individuare quella in cui ti trovi su una minimappa</string>
    <string name="torch_button_text">Torcia</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="credits_text">Sviluppato da Andrea Salvucci e Lorenzo Felletti</string>
    <string name="help_button_text">Aiuto</string>
    <string name="zoom_in_button_text">+</string>
    <string name="zoom_out_button_text">-</string>
    <string name="take_photo">Scan</string>
    <string name="start_capture">Analyze</string>
    <string name="content_prima_immagine_tutorial">Prima immagine</string>
    <string name="content_seconda_immagine_tutorial">Seconda immagine</string>
    <string name="content_terza_immagine_tutorial">Terza immagine</string>
    <string name="chiudi">Chiudi</string>
    <string name="scan_here_text_view_text_code">Scansiona il codice della fermata</string>
    <string name="scan_here_text_view_text_name">Scansiona il nome della fermata</string>
    <string name="slide_to_zoom_text">Scorri per fare zoom</string>
    <string name="map_bottom_sheet_layout_text">Fai tap sulla fermata desiderata</string>
    <string name="HOST">https://tper-backend.herokuapp.com</string>
    <string name="PORT">3000</string>
    <string name="infoText">Se il codice della fermata non è presente, premi questo bottone e scansiona il nome della fermata</string>
    <string name="tper_dictionary_separator">;</string>
    <string name="non_existent_bus_stop">FERMATA NON ESISTENTE</string>
    <string name="non_existent_bus_stop_code">La scansione risulta invalida oppure
        il codice della fermata non esiste. Fai tap su Aiuto per scoprire come scansionare il codice della fermata</string>
    <string name="non_existent_dialog_title">Attenzione</string>
    <string name="non_existent_dialog_neg_btn">Aiuto</string>
    <string name="ok_string">OK</string>
    <string name="proceed_string">Procedi</string>
    <string name="dismiss_string">Annulla</string>
    <string name="tutorial_toast_text">Aiuto premuto</string>
    <string name="bus_stop_not_recognized">Fermata non trovata</string>
    <string name="waiting_for_tper_response">In attesa della risposta da TPER</string>

    <string name="error_first_paragraph_text">Purtroppo la scansione da te effettuata risulta invalida.</string>
    <string name="error_second_paragraph_text">Ciò può accadere se hai scansionato un codice che non esiste oppure se ci sono elementi che interferiscono con la corretta lettura del codice.</string>
    <string name="error_third_paragraph_text">Ti consigliamo di riprovare, puoi aiutarti con i comandi di zoom o con la torcia. Grazie.</string>
    <string name="error_riprova_text">Riprova</string>
    <string name="permission_denied_dialog_title">Permessi Necessari</string>
    <string name="permission_denied_dialog_message">Senza i permessi per camera, storage e internet questa applicazione non può funzionare. Puoi fornirli dalle impostazioni dell\'app.</string>
    <string name="camera_rationale_dialog">I permessi di camera, storage e internet sono necessari per compiere riconoscimento del testo sull\'immagine della fermata. Non li useremo per nessun altro scopo</string>
    <string name="position_rationale_dialog">Più risultati sono stati trovati per questa fermata. I permessi per la posizione sono necessari per permetterti di scelgliere la fermata a cui sei interessato</string>
    <string name="position_permission_denied_dialog_title">Impossibilità a procedere</string>
    <string name="position_permission_denied_dialog_message">Hai scelto di non concedere i permessi per la posizione, quindi non siamo in grado di fornirti quali sono i prossimi bus in arrivo per questa fermata.</string>
    <string name="bus_stop_database_asset_path">database/bus_stops.db</string>
</resources>