<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/md_theme_dark_background"
    android:orientation="vertical">


    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/tutorialTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/led_dot_matrix"
        android:gravity="center"
        android:text="@string/tutorial_title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="40sp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:contentDescription="@string/content_prima_immagine_tutorial"
            app:srcCompat="@drawable/image_3" />

        <TextView
            android:id="@+id/introParagraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/intro_paragraph_text"
            android:textColor="@android:color/holo_orange_light" />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:contentDescription="@string/content_seconda_immagine_tutorial"
            app:srcCompat="@drawable/image_2" />

        <TextView
            android:id="@+id/firstParagraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/first_paragraph_text"
            android:textColor="@android:color/holo_orange_light" />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:contentDescription="@string/content_terza_immagine_tutorial"
            app:srcCompat="@drawable/image_1" />

        <TextView
            android:id="@+id/secondParagraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/second_paragraph_text"
            android:textColor="@android:color/holo_orange_light" />
    </LinearLayout>


    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />


    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/credits_text"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onPrimary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/help_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/chiudi" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

</LinearLayout>
